News UAT/force-app/main/default/objects/NXX2_CustomerActivityIndicator__mdt/NXX2_CustomerActivityIndicator__mdt.object-meta.xml
<CustomObject>
    <description>This Object represent the Customer Activity Indicator, based on the Due Date.</description>
    <label>NXX2_CustomerActivityIndicator</label>
    <pluralLabel>NXX2_CustomerActivityIndicators</pluralLabel>
</CustomObject>