News UAT/force-app/main/default/objects/NXX2_CustomerActivityIndicator__mdt/fields/DueDateExceeding_ColorNotification__c.field-meta.xml
<CustomField>
    <fullName>DueDateExceeding_ColorNotification__c</fullName>
    <description>This color will be show for Customer Activities which are about to exceeds</description>
    <label>DueDateExceeding_ColorNotification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>