News UAT/force-app/main/default/objects/NXX2_CustomerActivityIndicator__mdt/fields/DueDateExceeds_ColorNotification__c.field-meta.xml
<CustomField>
    <fullName>DueDateExceeds_ColorNotification__c</fullName>
    <description>Provide the color which need to be show for the Customer Activities which exceeds Due Date</description>
    <label>DueDateExceeds_ColorNotification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>