News UAT/force-app/main/default/objects/NXX2_CustomerActivityIndicator__mdt/fields/DueDateNotExceeds_ColorNotification__c.field-meta.xml
<CustomField>
    <fullName>DueDateNotExceeds_ColorNotification__c</fullName>
    <description>This field will show the color for which due date is not exceeds and not about to exeeds.</description>
    <label>DueDateNotExceeds_ColorNotification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>