News UAT/force-app/main/default/objects/NXX2_CustomerActivityIndicator__mdt/fields/Number_Of_Days_For_Warning__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Days_For_Warning__c</fullName>
    <description>Number of days for warning will be used to identify whether Due Date is over or not</description>
    <label>Number Of Days For Warning</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>